--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.0'
@@ -44,4 +45,5 @@ dependencies {
     implementation 'eu.chainfire:libsuperuser:1.0.0.+'
     implementation 'eu.chainfire:librootjava:1.3.0'
     implementation 'com.hmomeni.progresscircula:progresscircula:0.1.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
