--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'eu.chainfire:librootjava:1.3.0'
     implementation 'com.hmomeni.progresscircula:progresscircula:0.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.sephiroth74:android-target-tooltip:2.0.4'
 }
