--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-parcelize'
 //apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     defaultConfig {
         applicationId "tk.zwander.overlaymanager"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 3
         versionName versionCode.toString()
     }
@@ -23,34 +23,38 @@ android {
         exclude 'META-INF/atomicfu.kotlin_module'
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
     buildFeatures {
         viewBinding = true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.4.0-alpha02'
+    implementation 'com.google.android.material:material:1.5.0-alpha04'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
-    implementation 'eu.chainfire:libsuperuser:1.1.0.+'
-    implementation 'eu.chainfire:librootjava:1.3.0'
-    implementation 'com.hmomeni.progresscircula:progresscircula:0.2.1'
+    implementation "com.github.topjohnwu.libsu:core:3.1.2"
+    implementation "com.github.topjohnwu.libsu:service:3.1.2"
+    implementation 'com.github.2hamed:ProgressCircula:v0.2.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.sephiroth74:android-target-tooltip:2.0.4'
 
-    implementation "dev.rikka.shizuku:api:11.0.2"
-    implementation "dev.rikka.shizuku:provider:11.0.2"
-    implementation 'com.github.ChickenHook:RestrictionBypass:2.2'
+    implementation "dev.rikka.shizuku:api:12.0.0"
+    implementation "dev.rikka.shizuku:provider:12.0.0"
+    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:2.0'
 }
